--- a/pyproject.toml.org
+++ b/pyproject.toml.org
@@ -1,13 +1,8 @@
-[project]
+[tool.poetry]
 name = "cli_tool_audit"
 version = "3.1.0"
 description = "Audit for existence and version number of cli tools."
-authors = [
-    {name = "Matthew Martin", email = "matthewdeanmartin@gmail.com"},
-]
-license = {text = "MIT"}
-readme = "README.md"
-requires-python = ">=3.9"
+authors = ["Matthew Martin <matthewdeanmartin@gmail.com>"]
 keywords = ["cli tooling", "version numbers", ]
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -19,76 +14,105 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: 3.13",
-    "Programming Language :: Python :: 3.14",
 ]
-dependencies = [
-    "whichcraft>=0.6.1",
-    "semver>=3.0.2",
-    "packaging>=23.2",
-    "prettytable>=3.9.0",
-    "colorama>=0.4.6",
-    "colorlog>=6.8.0",
-    "tqdm>=4.66.1",
-    "toml>=0.10.2",
-    "tomlkit>=0.12.3",
+include = [
+    "cli_tool_audit/**/*.py",
+    "cli_tool_audit/**/*.md",
+    "cli_tool_audit/**/*.txt",
+    "cli_tool_audit/**/*.html",
+    "cli_tool_audit/**/*.jinja",
+    "cli_tool_audit/py.typed",
 ]
+exclude = [
+]
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/matthewdeanmartin/cli_tool_audit"
+homepage = "https://github.com/matthewdeanmartin/cli_tool_audit"
+documentation = "https://matthewdeanmartin.github.io/cli_tool_audit/cli_tool_audit/index.html"
 
-[project.urls]
+[tool.poetry.urls]
 "Bug Tracker" = "https://github.com/matthewdeanmartin/cli_tool_audit/issues"
 "Change Log" = "https://github.com/matthewdeanmartin/cli_tool_audit/blob/main/CHANGELOG.md"
 
-[project.scripts]
+[tool.poetry.scripts]
 cli_tool_audit = 'cli_tool_audit.__main__:main'
 tool_audit = 'cli_tool_audit.__main__:main'
 
+[tool.poetry.dependencies]
+python = ">=3.9, <4.0"
 
-[dependency-groups]
-dev = [
-    "git2md; python_version >= '3.10'",
-    "pyclean; python_version >= '3.12'",
-    "strip-docs>=1.0; python_version >= '3.12'",
-    "gha-update; python_version >= '3.12'",
-    "mkdocstrings[python]",
-    "mkdocs; python_version >= '3.12'",
-    "mdformat",
-    # plugin finder
-    "packaging; python_version >= '3.8'",
-    # mpy
-    "mypy; python_version >= '3.8'",
-    "types-toml; python_version >= '3.8'",
-    # reports
+# file finding
+whichcraft = ">=0.6.1"
 
-    # build
-    "vermin; python_version >= '3.8'",
-    "metametameta>=0.1.3; python_version >= '3.9'",
-    "hatchling; python_version >= '3.8'",
-    "ruff>=0.12.0; python_version >= '3.8'",
-    "pylint; python_version >= '3.8'",
-    "bandit; python_version >= '3.8'",
-    "pre-commit; python_version >= '3.8'",
-    # testing tools
-    "pytest; python_version >= '3.8'",
-    "pytest-cov; python_version >= '3.8'",
-    "pytest-xdist>=3.5.0; python_version >= '3.8'",
-    "pytest-randomly>=3.15.0; python_version >= '3.8'",
-    "pytest-sugar>=0.9.7; python_version >= '3.8'",
-    "pytest-mock; python_version >= '3.8'",
-    "pytest-unused-fixtures; python_version >= '3.10'",
-    "hypothesis[cli]; python_version >= '3.8'",
-    "detect-test-pollution",
-    "pytest-timeout>=2.4.0",
-    "pytest-network",
-    "pytest-unused-fixtures",
-    # docs
-    "interrogate>=1.5.0; python_version >= '3.8'",
-    "pydoctest==0.2.1; python_version >= '3.8'",
-    "pdoc3>=0.5.0; python_version >= '3.8'",
-    "mdformat>=0.5.0; python_version >= '3.8'",
-    "linkcheckmd>=1.4.0; python_version >= '3.8'",
-    "codespell>=2.2.6; python_version >= '3.8'",
-    "pyenchant>=3.2.2; python_version >= '3.8'",
-]
+# version parsing
+semver = ">=3.0.2"
+packaging = ">=23.2"
+
+# UI
+prettytable = ">=3.9.0"
+colorama = ">=0.4.6"
+colorlog = ">=6.8.0"
+tqdm = ">=4.66.1"
+
+# Config
+toml = ">=0.10.2"
+tomlkit = ">=0.12.3"
+
+# metadata, don't need it!
+# importlib-metadata = { version = ">=7.0.1", python = "<3.8" }
+
+
+[tool.poetry.dev-dependencies]
+setuptools = ">=70"
+pyclean = ">=3.0.0"
+vulture = ">=2.11"
+deadcode = ">=2.3.0"
+
+# build tools
+black = ">=23.11.0"
+pytest = ">=7.4.3"
+pytest-cov = ">=4.1.0"
+pytest-xdist =">=3.5.0"
+pytest-randomly=">=3.15.0"
+pytest-sugar =">=0.9.7"
+pytest-mock = ">=3.6.1"
+pytest-network= "*"
+pytest-unused-fixtures = "*"
+
+hypothesis = ">=6.96.0"
+tox = "*"
+pylint = ">=3.0.2"
+ruff = ">=0.1.9"
+
+# types
+mypy = ">=1.8.0"
+types-toml = "*"
+types-colorama = "*"
+types-tqdm = "*"
+
+# more testing
+# pytest-snapshot = ">=0.9.0"
+# pytest-asyncio = ">=0.23.2"
+#anyio = ">=4.2.0"
+#trio = ">=0.23.2"
+
+pre-commit = ">=3.5.0"
+scriv = ">=1.5.0"
+
+# docs
+interrogate = ">=1.5.0"
+pydoctest = ">=0.1.22"
+pdoc3 = ">=0.10.0"
+mdformat = ">=0.7.17"
+linkcheckmd = ">=1.4.0"
+codespell = ">=2.2.6"
+pyenchant = ">=3.2.2"
+metametameta=">=0.1.0"
+#
+# contract
+# griffe = ">=0.38.1"
+
 
 [tool.black]
 line-length = 120
@@ -113,6 +137,9 @@ exclude = '''
                      # the root of the project
 )
 '''
+[build-system]
+requires = ["poetry>=0.12"]
+build-backend = "poetry.masonry.api"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
@@ -127,7 +154,6 @@ norecursedirs = ["vendor", "scripts"]
 #markers =
 #	slow: marks tests as slow (deselect with '-m "not slow"')
 #	fast: marks tests as fast (deselect with '-m "not fast"')
-
 
 [tool.isort]
 default_section = "THIRDPARTY"
@@ -189,11 +215,32 @@ target-version = "py311"
 [tool.ruff.lint.pydocstyle]
 convention = "google"
 
-
 [tool.scriv]
 version = "literal: pyproject.toml: tool.poetry.version"
 format = "md"
 main_branches = "master, main, develop, dev"
+
+[mypy]
+warn_return_any = true
+warn_unused_configs = true
+strict = true
+disallow_untyped_calls = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+strict_optional = true
+warn_redundant_casts = true
+warn_no_return = true
+
+mypy_path = [".", "$MYPY_CONFIG_FILE_DIR/typings", "typings"]
+files = ["cli_tool_audit", "typings"]
+
+[mypy.pygount]
+ignore_missing_imports = true
+
+[mypy.astor]
+ignore_missing_imports = true
+
 
 [tool.coverage.report]
 # Regexes for lines to exclude from consideration
@@ -210,7 +257,6 @@ exclude_also = [
     # Don't complain about abstract methods, they aren't run:
     "@(abc\\.)?abstractmethod",
 ]
-
 
 [tool.cli-tools]
 make = {name = "make", version = ">=3.81", schema = "semver", tags = ["build"]}
